--- a/examples/01_zed/extractor.config.json
+++ b/examples/01_zed/extractor.config.json
@@ -1,7 +1,7 @@
 {
-	"$schema": "../src/schema/extractor.config.schema.json",
+	"$schema": "../../src/schema/extractor.config.schema.json",
 	"recordingPath": "d:/Uni/Bachelorarbeit/Smart Farming Lab/Data/Pascal/zed_only2/zed_only_0.mcap",
-	"exportPath": "export-zed",
+	"exportPath": "export",
 	"topics": [
 		{
 			"alias": "zed_left",
