--- a/examples/02_gps/generator.config.json
+++ b/examples/02_gps/generator.config.json
@@ -1,5 +1,12 @@
 {
 	"$schema": "../../src/schema/generator.config.schema.json",
+	"import": {
+		"dataRoot": "d:/Uni/Bachelorarbeit/Smart Farming Lab/Code/smart-farming-obstacle/examples/02_gps/export@1763669336"
+	},
+	"export": {
+		"outputPath": "render",
+		"generateAlphaMaps": true
+	},
 	"render": {
 		"device": "GPU",
 		"samples": 1
@@ -12,33 +19,27 @@
 			"temperature": 6500
 		}
 	},
-	"dataPath": "d:/Uni/Bachelorarbeit/Smart Farming Lab/Code/smart-farming-obstacle/examples/02_gps/export@1763669336",
-	"output": {
-		"exportPath": "render",
-		"generateAlphaMaps": true
-	},
 	"sensors": [
 		{
 			"id": "ouster",
 			"type": "lidar",
 			"fov": 90,
-			"parentBone": "camera/rear_left",
-			"rotationAxis": {
-				"x": 1,
-				"y": 0,
+			"parentBone": "os_lidar",
+			"rotationEuler": {
+				"x": 0,
+				"y": 2.3561945,
 				"z": 0
-			},
-			"firstAngle": 90
+			}
 		},
 		{
 			"id": "zed_left",
 			"type": "camera",
-			"fov": 80,
+			"fov": 110,
 			"parentBone": "zed_left",
 			"rotationEuler": {
-				"x": -0.69,
-				"y": 0.1,
-				"z": -0.19
+				"x": 0.711,
+				"y": -0.104,
+				"z": -0.343
 			}
 		}
 	],
